# zoom-sdk-windows

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.org  ZOOM_README.md  all_0.js  all_15.js  all_2.js  all_3.js  all_7.js  all_d.js  all_e.js  all_f.js  annotated.html  auth__service__interface_8h.html  auth__service__interface_8h__incl.dot  auth__service__interface_8h__incl.md5  auth__service__interface_8h_source.html  calender__service__interface_8h.html  calender__service__interface_8h_source.html  class_audio_raw_data-members.html  class_audio_raw_data.html  class_customized_h323_device-members.html  class_customized_h323_device.html  class_i_accessibility_setting_context-members.html  class_i_accessibility_setting_context.html  class_i_account_info-members.html  class_i_account_info.html  class_i_active_video_render_element-members.html  class_i_active_video_render_element.html  class_i_alternative_host_info-members.html  class_i_alternative_host_info.html  class_i_annotation_controller-members.html  class_i_annotation_controller.html  class_i_answer_item-members.html  class_i_answer_item.html  class_i_audio_raw_data_channel-members.html  class_i_audio_raw_data_channel.html  class_i_audio_raw_data_receiver-members.html  (+749 more)
doc/: Zoom SDK.chm  zoom windows sdk.doc
docs/: index.html
h/: auth_service_interface.h  calender_service_interface.h  customized_resource_helper_interface.h  direct_share_helper_interface.h  embedded_browser_interface.h  meeting_h323_helper_interface.h  meeting_phone_helper_interface.h  meeting_service_interface.h  network_connection_handler_interface.h  outlook_plugin_integration_helper_interface.h  premeeting_service_interface.h  setting_service_interface.h  ui_hook_interface.h  zoom_sdk.h  zoom_sdk_def.h  zoom_sdk_ext.h  zoom_sdk_platform.h  zoom_sdk_raw_data_def.h  zoom_sdk_raw_data_helper_interface.h  zoom_sdk_sms_helper_interface.h  zoom_sdk_util_define.h
lib/: sdk.lib
sdk_demo/: AuthServiceMgr.cpp  AuthServiceMgr.h  DemoUI.cpp  DemoUI.h  EventMgr.cpp  Main.cpp  MeetingServiceMgr.cpp  MeetingServiceMgr.h  MessageWnd.h  PreMeetingServiceMgr.cpp  PreMeetingServiceMgr.h  ReadMe.txt  Resource.h  how to build.txt  resource.h  sdk_demo.cpp  sdk_demo.rc  sdk_demo.sln  sdk_demo.vcproj  sdk_demo.vcxproj  sdk_demo_2017.vcxproj  stdafx.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  (+81 more)
src/: AuthServiceMgr.cpp  AuthServiceMgr.h  CMakeLists.txt  DemoUI.cpp  DemoUI.h  Main.cpp  MeetingServiceMgr.cpp  MeetingServiceMgr.h  Parameters.h  PreMeetingServiceMgr.cpp  PreMeetingServiceMgr.h  RawAudioDataHandler.cpp  RawAudioDataHandler.h  RawVideoDataHandler.cpp  ntundoc.h  orchestrator.proto  queryHandle.cpp
(+472 files in other folders)
